--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         </div>
         <div class="manPic"></div>
         <div class="content"></div>
+        <div class="txt"></div>
       </div>
       <div class="page p2">
           <div class="topWrap">
